--- a/index.html
+++ b/index.html
@@ -66,26 +66,34 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Microsoft_Azure.svg" alt="Azure Logo">
     </div>
     <h1>Engenharia de Dados com Azure</h1>
-    <p>Projeto com foco em ingestão, transformação e visualização de dados públicos</p>
+    <p>Arquitetura em Nuvem de Ponta a Ponta com Dados Públicos Brasileiros</p>
   </header>
 
   <main>
     <section>
       <h2>Sobre o Projeto</h2>
-      <p>Este projeto demonstra uma arquitetura de dados moderna utilizando serviços da Microsoft Azure, incluindo Data Factory, Storage, Databricks e Power BI. O objetivo é processar dados públicos brasileiros com qualidade e gerar insights com valor social.</p>
+      <p>Este projeto implementa uma arquitetura moderna de engenharia de dados no Microsoft Azure, com foco em ingestão, transformação e visualização de dados públicos com valor social. A solução foi construída do zero utilizando Terraform, Data Factory, Azure Data Lake Gen2, Databricks (PySpark), Synapse Analytics e Power BI, aplicando práticas robustas de governança, automação e versionamento.
+
+A pipeline cobre todo o fluxo: da coleta de dados brutos em APIs e repositórios públicos, passando pela modelagem em camadas (bronze, silver, gold), até a disponibilização em dashboards interativos. Todos os códigos foram versionados no GitHub, e as credenciais sensíveis foram protegidas conforme boas práticas.</p>
     </section>
 
     
-    <section>
-      <h2>Sobre Mim</h2>
-      <p>Tenho mais de 5 anos de experiência na área de dados, atuando em projetos de análise e engenharia de dados e BI. Ao longo da minha trajetória, desenvolvi pipelines de dados robustos, modelos analíticos, integrações entre sistemas e dashboards voltados para apoio à decisão estratégica.</p>
-      <p>Possuo certificações oficiais da Microsoft, incluindo:<br>
-      <strong>PL-300</strong>: Power BI Data Analyst Associate<br>
-      <strong>DP-900</strong>: Azure Data Fundamentals<br>
-      (atualmente em preparação para a <strong>DP-600</strong>)</p>
-      <p>Desenvolvi, do zero, arquiteturas completas na plataforma <strong>Microsoft Azure</strong>, integrando serviços como <em>Data Factory, Blob Storage, Azure SQL Database, Databricks (PySpark)</em> e <em>Power BI</em> para gerar valor com dados públicos reais.</p>
-      <p>Minha missão é aplicar tecnologia com propósito — traduzindo dados complexos em soluções que realmente importam.</p>
-    </section>
+<section>
+  <h2>Sobre Mim</h2>
+  <p>Sou profissional com mais de 5 anos de experiência na área de dados, atuando com análise, engenharia de dados e business intelligence. Tenho expertise no desenvolvimento de pipelines de dados de ponta a ponta, modelos analíticos, integrações entre sistemas e soluções orientadas à tomada de decisão.</p>
+
+  <p>Possuo certificações oficiais da Microsoft:<br>
+    <strong>PL-300</strong>: Power BI Data Analyst Associate<br>
+    <strong>DP-900</strong>: Azure Data Fundamentals<br>
+    (em preparação para a <strong>DP-600</strong>: Fabric Analytics Engineer Associate)
+  </p>
+
+  <p>Já projetei arquiteturas completas na <strong>Microsoft Azure</strong>, integrando serviços como <em>Data Factory, Data Lake Storage Gen2, Azure SQL Database, Synapse Analytics, Databricks (PySpark)</em> e <em>Power BI</em>, com foco em escalabilidade, governança e reprodutibilidade via IaC.</p>
+
+  <p>Acredito que dados só geram valor real quando transformados em soluções aplicáveis. Minha missão é aplicar tecnologia com propósito — entregando produtos de dados que apoiam decisões estratégicas e geram impacto positivo.</p>
+</section>
+
+
 
     <section>
       <h2>Repositório no GitHub</h2>
