--- a/index.html
+++ b/index.html
@@ -4,60 +4,74 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Engineer - Azure com Dados Públicos</title>
-  <style>
-    body {
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f9f9f9;
-      color: #333;
-    }
+<style>
+  body {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #FFFFFF; /* mais limpo e profissional que #f9f9f9 */
+    color: #2B2B2B;
+    line-height: 1.6;
+  }
 
-    header {
-      background-color: #0078D4;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
+  header {
+    background-color: #0078D4;
+    color: white;
+    padding: 2.5rem 1rem;
+    text-align: center;
+  }
 
-    header img {
-      height: 50px;
-      vertical-align: middle;
-      margin: 0 0.5rem;
-    }
+  header img {
+    height: 52px;
+    vertical-align: middle;
+    margin: 0 0.5rem;
+  }
 
-    h1 {
-      margin: 0.5rem 0 0;
-      font-size: 2rem;
-    }
+  h1 {
+    margin: 0.5rem 0 0;
+    font-size: 2.2rem;
+    font-weight: 600;
+  }
 
-    main {
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
+  h2 {
+    color: #0078D4;
+    font-size: 1.5rem;
+    margin-top: 2rem;
+  }
 
-    section {
-      margin-bottom: 2rem;
-    }
+  main {
+    max-width: 840px;
+    margin: 2rem auto;
+    padding: 0 1.2rem;
+  }
 
-    a {
-      color: #0078D4;
-      text-decoration: none;
-      font-weight: 600;
-    }
+  section {
+    margin-bottom: 2.5rem;
+    background-color: #F3F9FD; /* seção com fundo leve */
+    padding: 1.5rem;
+    border-radius: 6px;
+  }
 
-    a:hover {
-      text-decoration: underline;
-    }
+  a {
+    color: #005A9E;
+    text-decoration: none;
+    font-weight: 600;
+  }
 
-    footer {
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.875rem;
-      color: #777;
-    }
-  </style>
+  a:hover {
+    text-decoration: underline;
+  }
+
+  footer {
+    text-align: center;
+    padding: 1rem;
+    font-size: 0.875rem;
+    color: #777;
+    border-top: 1px solid #eee;
+    margin-top: 3rem;
+  }
+</style>
+
 </head>
 <body>
   <header>
@@ -113,6 +127,16 @@ A pipeline cobre todo o fluxo: da coleta de dados brutos em APIs e repositórios
     </section>
   </main>
 
+<h3>Stack Técnica</h3>
+<ul>
+  <li>💻 Linguagens: Python, SQL, DAX</li>
+  <li>☁️ Cloud: Microsoft Azure (Data Factory, Synapse, Data Lake Gen2, SQL DB)</li>
+  <li>📈 BI: Power BI</li>
+  <li>🛠️ Infraestrutura: Terraform (IaC)</li>
+  <li>📊 Processamento: PySpark, Databricks, Synapse Spark</li>
+  <li>🔒 Segurança: Controle de acesso via RBAC e autenticação com Service Principal</li>
+</ul>
+ 
   <footer>
     &copy; 2025 Samuel Calado. Todos os direitos reservados.
   </footer>
