--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ A pipeline cobre todo o fluxo: da coleta de dados brutos em APIs e repositórios
 <section>
   <h2>Sobre Mim</h2>
   <p>Sou profissional com mais de 5 anos de experiência na área de dados, atuando com análise, engenharia de dados e business intelligence. Tenho expertise no desenvolvimento de pipelines de dados de ponta a ponta, modelos analíticos, integrações entre sistemas e soluções orientadas à tomada de decisão.</p>
+  <img src="https://raw.githubusercontent.com/Sanivaldo/data-engineer-azure-dados-publicos/main/docs/img/badges.jpg" alt="Fluxo Arquitetura Azure" style="width:100%; max-width:800px; display:block; margin: 0 auto; border-radius: 8px;">
 
   <p>Possuo certificações oficiais da Microsoft:<br>
     <strong>PL-300</strong>: Power BI Data Analyst Associate<br>
