--- a/index.html
+++ b/index.html
@@ -144,6 +144,17 @@ A pipeline cobre todo o fluxo: da coleta de dados brutos em APIs e repositórios
         <li><strong>📁 Versionamento:</strong> GitHub (repositório com código de IaC, pipelines e notebooks)</li>
       </ul>
     </section>
+
+  <section>
+    <h2>Contato</h2>
+    <ul>
+      <li>📞 Telefone: <a href="tel:+5531993416957">+55 31 99341-6957</a></li>
+      <li>🔗 LinkedIn: <a href="https://www.linkedin.com/in/samuelcalado/" target="_blank" rel="noopener noreferrer">linkedin.com/in/samuelcalado</a></li>
+      <li>📧 Email: <a href="mailto:samuelcalado1@hotmail.com">samuelcalado1@hotmail.com</a></li>
+    </ul>
+  </section>
+</main>
+
     
   </main>
 
